--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "dependencies": {
     "@midwayjs/bootstrap": "^2.3.0",
     "@midwayjs/core": "^2.3.0",
-    "@midwayjs/web": "^2.3.0",
     "@midwayjs/decorator": "^2.3.0",
+    "@midwayjs/web": "^2.3.0",
+    "axios": "^0.21.1",
     "egg": "^2.0.0",
-    "egg-scripts": "^2.10.0"
+    "egg-scripts": "^2.10.0",
+    "iconv-lite": "^0.6.2"
   },
   "devDependencies": {
     "@midwayjs/cli": "^1.0.0",
@@ -19,8 +21,8 @@
     "@types/jest": "^26.0.10",
     "@types/node": "14",
     "cross-env": "^6.0.0",
-    "mwts": "^1.0.5",
     "jest": "^26.4.0",
+    "mwts": "^1.0.5",
     "ts-jest": "^26.2.0",
     "typescript": "^4.0.0"
   },
