--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@midwayjs/decorator": "^2.3.0",
     "@midwayjs/web": "^2.3.0",
     "axios": "^0.21.1",
+    "crypto-js": "^4.0.0",
     "egg": "^2.0.0",
     "egg-scripts": "^2.10.0",
     "iconv-lite": "^0.6.2"
